# dataset-search-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: claude-desktop.settings.json
src/dataset_search_mcp/: server.py
